fix(style): Align weather content to center

--- a/visuals/style.scss
+++ b/visuals/style.scss
@@ -21,6 +21,9 @@ body {
 	.weather-container {
 		position: absolute;
 		top: 0;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
 
 		div {
 			display: flex;
